--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">My Starter Apps</string>
+    <string name="web_client_id">357402420811-lupqnig30ft8qev6he4do8tau775idp5.apps.googleusercontent.com</string>
 </resources>
